--- a/app/src/main/res/layout-land/activity_shop.xml
+++ b/app/src/main/res/layout-land/activity_shop.xml
@@ -4,74 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black_2"
     tools:context=".ShopActivity">
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="731dp"
+        android:layout_height="411dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fondo_horizontal" />
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="929dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="195dp"
-        android:layout_height="152dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#9C9C9C"
         android:contentDescription="@string/app_name"
+        android:onClick="onClickImagen"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shopTitleLabel"
         app:srcCompat="@android:drawable/ic_menu_camera" />
-
-    <ImageButton
-        android:id="@+id/unlikeButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="140dp"
-        android:background="@drawable/rounded_shape"
-        android:backgroundTint="#F33628"
-        android:contentDescription="@string/app_name"
-        android:minHeight="48dp"
-        android:rotation="-90"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/votesLabel"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        app:tint="#FFFFFF" />
-
-    <ImageButton
-        android:id="@+id/likeButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="72dp"
-        android:background="@drawable/rounded_shape"
-        android:backgroundTint="#4CAF50"
-        android:contentDescription="@string/default_web_client_id"
-        android:minHeight="48dp"
-        android:rotation="90"
-        android:rotationX="0"
-        android:rotationY="0"
-        app:layout_constraintBottom_toBottomOf="@+id/unlikeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/votesLabel"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        app:tint="#F8F8F8" />
 
     <TextView
         android:id="@+id/shopTitleLabel"
         android:layout_width="307dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="24dp"
         android:text="Title"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/grey_200"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -81,52 +64,117 @@
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="72dp"
-        android:numeric="decimal"
         android:text="Lat"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/lngShopLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/latShopText" />
+
+    <TextView
+        android:id="@+id/latShopText"
+        android:layout_width="166dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="24dp"
+        android:text="Lat."
+        android:textAlignment="center"
+        android:textColor="@color/grey_200"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shopTitleLabel" />
 
     <TextView
         android:id="@+id/votesLabel"
         android:layout_width="94dp"
         android:layout_height="48dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="196dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="18dp"
         android:numeric="integer"
         android:text="Votos"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.808"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/likeButton"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/lngShopLabel"
         android:layout_width="164dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="244dp"
         android:layout_marginEnd="24dp"
-        android:numeric="decimal"
         android:text="Lng"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintHorizontal_bias="0.98"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lngShopText" />
 
+    <TextView
+        android:id="@+id/lngShopText"
+        android:layout_width="164dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="24dp"
+        android:text="Lng."
+        android:textAlignment="center"
+        android:textColor="@color/grey_200"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shopTitleLabel" />
+
+    <ImageButton
+        android:id="@+id/likeButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:background="@drawable/rounded_shape"
+        android:backgroundTint="#5604AA09"
+        android:contentDescription="@string/default_web_client_id"
+        android:minHeight="48dp"
+        android:rotation="90"
+        android:rotationX="0"
+        android:rotationY="0"
+        app:layout_constraintEnd_toStartOf="@+id/unlikeButton"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:srcCompat="?attr/homeAsUpIndicator"
+        app:tint="#F8F8F8" />
+
+    <ImageButton
+        android:id="@+id/unlikeButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="256dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/rounded_shape"
+        android:backgroundTint="#79F33628"
+        android:contentDescription="@string/app_name"
+        android:minHeight="48dp"
+        android:rotation="-90"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="?attr/homeAsUpIndicator"
+        app:tint="#FFFFFF" />
 </androidx.constraintlayout.widget.ConstraintLayout>
